--- a/css/home-work.css
+++ b/css/home-work.css
@@ -57,6 +57,73 @@
     border: 3px solid #eb7418;
 }
 
+/* FILTERS header */
+
+#filtersHeader {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2em;
+}
+
+/* FILTER BUTTONS */
+
+.filterButton {
+    z-index: 1;
+    position: relative;
+    font-size: inherit;
+    font-family: inherit;
+    color: black;
+    padding: 0.5em 1em;
+    outline: none;
+    overflow: hidden;
+    transition: color 0.2s ease-in-out;
+    border: none;
+    /* border: 1px solid grey; */
+    background-color: white;
+    border-radius: 50px;
+    box-shadow: 0px 2px 5px 0px #c1c1c1;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.filterButton::before {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    transform-origin: center;
+    transform: translate3d(-50%, -50%, 0) scale3d(0, 0, 0);
+    transition: transform 0.5s ease-in-out;
+    background-color: #a6d6f3;
+}
+
+.filterButton:hover {
+    cursor: pointer;
+    border-radius: 50px;
+    border: none;
+    background-color: #dbeffc;
+}
+
+.filterButton:hover::before {
+    transform: translate3d(-50%, -50%, 0) scale3d(15, 15, 15);
+    border-radius: 50px;
+}
+
+.filterButton:focus {
+    background-color: #a6d6f3;
+    border-radius: 50px;
+}
+
+.filterButton-active {
+    background-color: #a6d6f3;
+    border-radius: 50px;
+}
+
 @media only screen and (max-width: 510px) {
     .img_portfolio {
         height: 70vw;
