--- a/css/home-work.css
+++ b/css/home-work.css
@@ -100,6 +100,7 @@
     transform: translate3d(-50%, -50%, 0) scale3d(0, 0, 0);
     transition: transform 0.5s ease-in-out;
     background-color: #a6d6f3;
+    outline: none;
 }
 
 .filterButton:hover {
@@ -107,11 +108,13 @@
     border-radius: 50px;
     border: none;
     background-color: #dbeffc;
+    outline: none;
 }
 
 .filterButton:hover::before {
     transform: translate3d(-50%, -50%, 0) scale3d(15, 15, 15);
     border-radius: 50px;
+
 }
 
 .filterButton:focus {
@@ -122,6 +125,28 @@
 .filterButton-active {
     background-color: #a6d6f3;
     border-radius: 50px;
+
+    z-index: 1;
+    position: relative;
+    font-size: inherit;
+    font-family: inherit;
+    color: black;
+    padding: 0.5em 1em;
+    outline: none;
+    overflow: hidden;
+    transition: color 0.2s ease-in-out;
+    border: none;
+    /* border: 1px solid grey; */
+    background-color: #a6d6f3;
+    border-radius: 50px;
+    box-shadow: 0px 2px 5px 0px #c1c1c1;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.filterButton-active:focus {
+    background-color: #a6d6f3;
+
+}
 }
 
 @media only screen and (max-width: 510px) {
