--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
     background-color: transparent;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1 {
     font-family: "Playfair", Georgia, serif !important;
     font-size: 2em !important;
