--- a/css/style.css
+++ b/css/style.css
@@ -20,20 +20,20 @@ html {
 
 h1 {
     font-family: "Playfair", Georgia, serif !important;
-    font-size: 2em !important;
+    font-size: 2rem !important;
 }
 
 h2 {
     font-family: "Playfair", Georgia, serif !important;
-    font-size: 1.5em !important;
+    font-size: 1.5rem !important;
     padding: 0 !important;
     padding-top: 0.5% !important;
 }
 
 h3 {
     font-family: "Playfair", Georgia, serif !important;
-    font-size: 1.2em !important;
-    line-height: 1.2 !important;
+    font-size: 1.4rem !important;
+    line-height: 1.5rem !important;
     align-self: center !important;
     text-align: center !important;
     margin-top: 5% !important;
@@ -44,8 +44,8 @@ h3 {
 
 h4 {
     font-family: "Lato", Arial, sans-serif !important;
-    font-size: 0.9em !important;
-    line-height: 1.5 !important;
+    font-size: 1rem !important;
+    line-height: 1.5rem !important;
     color: #4d4d4d !important;
     align-self: center !important;
     text-align: center !important;
@@ -60,8 +60,8 @@ body {
 
 p {
     font-family: "Lato", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 16px !important;
+    line-height: 1.5rem !important;
 }
 
 a {
@@ -81,22 +81,4 @@ nav ul li {
 nav ul a {
     padding: 0 !important;
     text-align: center;
-}
-
-@media only screen and (max-width: 680px) {
-    #pom {
-        grid-area: pom;
-        background-color: #ffb561;
-        z-index: -1;
-    }
-
-    p {
-        font-family: "Lato", Arial, sans-serif;
-        font-size: 16px;
-        line-height: 1.5;
-    }
-
-    br {
-        display: none;
-    }
 }
