--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
 
 @font-face {
     font-family: "Playfair";
+    src: url("../fonts/PlayfairDisplay-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Playfair Bold";
     src: url("../fonts/PlayfairDisplay-Bold.ttf");
 }
 
@@ -20,12 +25,12 @@ html {
 
 h1 {
     font-family: "Playfair", Georgia, serif !important;
-    font-size: 2rem !important;
+    font-size: 3rem !important;
 }
 
 h2 {
     font-family: "Playfair", Georgia, serif !important;
-    font-size: 1.5rem !important;
+    font-size: 2rem !important;
     padding: 0 !important;
     padding-top: 0.5% !important;
 }
