--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -49,9 +49,9 @@ nav ul a:hover {
     border-image: linear-gradient(
         to right,
         #f7daab,
-        #dd8051,
-        #dd8051,
-        #dd8051,
+        #e47137,
+        #e47137,
+        #e47137,
         #f7daab
     );
     border-image-slice: 1;
