--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html {
 
 h1 {
     font-family: "Playfair", Georgia, serif !important;
-    font-size: 3rem !important;
+    font-size: 2.7rem !important;
 }
 
 h2 {
@@ -36,7 +36,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Playfair", Georgia, serif !important;
+    font-family: "Playfair Bold", Georgia, serif !important;
     font-size: 1.4rem !important;
     line-height: 1.5rem !important;
     align-self: center !important;
